--- a/css/css_2.css
+++ b/css/css_2.css
@@ -11,14 +11,14 @@
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../images/DSC_0140.jpg) no-repeat center center;
+    background: url(../images/DSC_0140.JPG) no-repeat center center;
     background-size: cover;
 }
 
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../images/DSC_0147.jpg) no-repeat center center;
+    background: url(../images/DSC_0147.JPG) no-repeat center center;
     background-size: cover;
 }
 
